--- a/ProfilePort/index.html
+++ b/ProfilePort/index.html
@@ -51,11 +51,25 @@
     <script src="bower_components/angular-mocks.js"></script>
     <script src="bower_components/lodash.js"></script>
     <script src="bower_components/moment.js"></script>
-
-
+    <script src="bower_components/xtform-master/xtForm.js"></script>
+  
+    <script src="App/app.js"></script>
+    <script src="App/config.js"></script>
     <script src="App/Dashboard/Controllers/DashboardCtrl.js"></script>
+    <script src="App/Profile/Services/ProfileService.js"></script>
+    <script src="App/Profile/Controllers/ProfileCtrl.js"></script>
+    <script src="App/Notes/Service/notesService.js"></script>
+    <script src="App/Notes/Directive/notesErrorCheck.js"></script>
+    <script src="App/Notes/Controller/notesCtrl.js"></script>
+    <script src="App/Message/Services/MessageService.js"></script>
+    <script src="App/Message/Controllers/Message.js"></script>
+    <script src="App/Helper/Services/HelperService.js"></script>
+    <script src="App/Dashboard/Services/DashboardService.js"></script>
 
-
-
+    <script src="App/Common/Services/menuService.js"></script>
+    <script src="App/Common/Services/stateService.js"></script>
+    <script src="App/Common/Controllers/secondaryMenu.js"></script>
+    <script src="App/Common/Controllers/errorModalCtrl.js"></script>
+    <script src="App/Common/Controllers/404Ctrl.js"></script>
 </body>
 </html>
