--- a/ProfilePort/index.html
+++ b/ProfilePort/index.html
@@ -15,6 +15,31 @@
     <link href="bower_components/ui-bootstrap-csp.css" rel="stylesheet" />
     <link href="bower_components/loading-bar.css" rel="stylesheet" />
     <link href="bower_components/font-awesome.css" rel="stylesheet" />
+
+    <script type="text/javascript" src="bower_components/jquery-1.10.2.js"></script>
+    <script type="text/javascript" src="bower_components/angular.js"></script>
+    <script type="text/javascript" src="bower_components/jquery.validate.js"></script>
+    <script type="text/javascript" src="bower_components/angular-route.js"></script>
+    <script type="text/javascript" src="bower_components/angular-ui/ui-bootstrap.js"></script>
+    <script type="text/javascript" src="bower_components/angular-ui/ui-bootstrap-tpls.js"></script>
+    <script type="text/javascript" src="bower_components/angular-ui/ui-utils.js"></script>
+    <script type="text/javascript" src="bower_components/angular-ui/ui-utils-ieshiv.js"></script>
+    <script type="text/javascript" src="bower_components/angular-ui.js"></script>
+    <script type="text/javascript" src="bower_components/angular-ui-ieshiv.js"></script>
+    <script type="text/javascript" src="bower_components/angular-toastr.js"></script>
+    <script type="text/javascript" src="bower_components/angular-sanitize.js"></script>
+    <script type="text/javascript" src="bower_components/angular-toastr.tpls.js"></script>
+    <script type="text/javascript" src="bower_components/angular-busy.js"></script>
+    <script type="text/javascript" src="bower_components/angular-animate.js"></script>
+    <script type="text/javascript" src="bower_components/angular-cookies.js"></script>
+    <script type="text/javascript" src="bower_components/angular-file-upload.js"></script>
+    <script type="text/javascript" src="bower_components/bootstrap.js"></script>
+    <script type="text/javascript" src="bower_components/angular-loader.js"></script>
+    <script type="text/javascript" src="bower_components/angular-messages.js"></script>
+    <script type="text/javascript" src="bower_components/angular-mocks.js"></script>
+    <script type="text/javascript" src="bower_components/lodash.js"></script>
+    <script type="text/javascript" src="bower_components/moment.js"></script>
+    <script type="text/javascript" src="bower_components/xtform-master/xtForm.js"></script>
 </head>
 
 <body>
@@ -28,48 +53,27 @@
         <div class="" data-ng-view="" id="ng-view"></div>
     </div>
 
-    <script src="bower_components/jquery-1.10.2.js"></script>
-    <script src="bower_components/angular.js"></script>
-    <script src="bower_components/jquery.validate.js"></script>
-    <script src="bower_components/angular-route.js"></script>
-    <script src="bower_components/angular-ui/ui-bootstrap.js"></script>
-    <script src="bower_components/angular-ui/ui-bootstrap-tpls.js"></script>
-    <script src="bower_components/angular-ui/ui-utils.js"></script>
-    <script src="bower_components/angular-ui/ui-utils-ieshiv.js"></script>
-    <script src="bower_components/angular-ui.js"></script>
-    <script src="bower_components/angular-ui-ieshiv.js"></script>
-    <script src="bower_components/angular-toastr.js"></script>
-    <script src="bower_components/angular-sanitize.js"></script>
-    <script src="bower_components/angular-toastr.tpls.js"></script>
-    <script src="bower_components/angular-busy.js"></script>
-    <script src="bower_components/angular-animate.js"></script>
-    <script src="bower_components/angular-cookies.js"></script>
-    <script src="bower_components/angular-file-upload.js"></script>
-    <script src="bower_components/bootstrap.js"></script>
-    <script src="bower_components/angular-loader.js"></script>
-    <script src="bower_components/angular-messages.js"></script>
-    <script src="bower_components/angular-mocks.js"></script>
-    <script src="bower_components/lodash.js"></script>
-    <script src="bower_components/moment.js"></script>
-    <script src="bower_components/xtform-master/xtForm.js"></script>
-  
-    <script src="App/app.js"></script>
-    <script src="App/config.js"></script>
-    <script src="App/Dashboard/Controllers/DashboardCtrl.js"></script>
-    <script src="App/Profile/Services/ProfileService.js"></script>
-    <script src="App/Profile/Controllers/ProfileCtrl.js"></script>
-    <script src="App/Notes/Service/notesService.js"></script>
-    <script src="App/Notes/Directive/notesErrorCheck.js"></script>
-    <script src="App/Notes/Controller/notesCtrl.js"></script>
-    <script src="App/Message/Services/MessageService.js"></script>
-    <script src="App/Message/Controllers/Message.js"></script>
-    <script src="App/Helper/Services/HelperService.js"></script>
-    <script src="App/Dashboard/Services/DashboardService.js"></script>
 
-    <script src="App/Common/Services/menuService.js"></script>
-    <script src="App/Common/Services/stateService.js"></script>
-    <script src="App/Common/Controllers/secondaryMenu.js"></script>
-    <script src="App/Common/Controllers/errorModalCtrl.js"></script>
-    <script src="App/Common/Controllers/404Ctrl.js"></script>
+    <script type="text/javascript" src="App/app.js"></script>
+    <script type="text/javascript" src="App/config.js"></script>
+    <script  type="text/javascript" src="App/Common/Services/menuService.js"></script>
+    <script  type="text/javascript" src="App/Common/Services/stateService.js"></script>
+    <script  type="text/javascript" src="App/Common/Controllers/secondaryMenu.js"></script>
+    <script  type="text/javascript" src="App/Common/Controllers/errorModalCtrl.js"></script>
+    <script  type="text/javascript" src="App/Common/Controllers/404Ctrl.js"></script>
+  
+    <script type="text/javascript" src="App/Dashboard/Controllers/DashboardCtrl.js"></script>
+    <script type="text/javascript" src="App/Profile/Services/ProfileService.js"></script>
+    <script type="text/javascript" src="App/Profile/Controllers/ProfileCtrl.js"></script>
+    <script type="text/javascript" src="App/Notes/Service/notesService.js"></script>
+    <script type="text/javascript" src="App/Notes/Directive/notesErrorCheck.js"></script>
+    <script type="text/javascript" src="App/Notes/Controller/notesCtrl.js"></script>
+    <script type="text/javascript" src="App/Message/Services/MessageService.js"></script>
+    <script type="text/javascript" src="App/Message/Controllers/Message.js"></script>
+    <script type="text/javascript" src="App/Helper/Services/HelperService.js"></script>
+    <script type="text/javascript" src="App/Dashboard/Services/DashboardService.js" ></script>
+
+    
+
 </body>
 </html>
