--- a/ProfilePort/index.html
+++ b/ProfilePort/index.html
@@ -56,6 +56,7 @@
 
     <script type="text/javascript" src="App/app.js"></script>
     <script type="text/javascript" src="App/config.js"></script>
+    <script src="App/appCtrl.js"></script>
     <script type="text/javascript" src="App/Profile/Services/ProfileService.js"></script>
     <script type="text/javascript" src="App/Profile/Controllers/ProfileCtrl.js"></script>
     <script  type="text/javascript" src="App/Common/Services/menuService.js"></script>
