--- a/ProfilePort/index.html
+++ b/ProfilePort/index.html
@@ -62,10 +62,28 @@
     <script type="text/javascript" src="app/config.js"></script>
     <script type="text/javascript" src="app/appCtrl.js"></script>
 
+    <script src="app/Home/controllers/home.js"></script>
+    <script src="app/Home/services/homeService.js"></script>
+
     <script type="text/javascript" src="app/profile/controllers/profileCtrl.js"></script>
     <script type="text/javascript" src="app/profile/services/profileService.js"></script>
+    
     <script src="app/common/controllers/coErrorModalCtrl.js"></script>
     <script src="Scripts/xtform-master/xtForm.js"></script>
+    <script src="app/common/controllers/uploadFileModalCtrl.js"></script>
 
+    <script src="app/notes/controllers/notesCtrl.js"></script>
+    <script src="app/notes/services/notesService.js"></script>
+    <!--Directives-->
+    <script src="app/common/directives/characterOnly.js"></script>
+    <script src="app/common/directives/datePickerPattern.js"></script>
+    <script src="app/common/directives/discardChangesConfirmation.js"></script>
+    <script src="app/common/directives/ngEnter.js"></script>
+    <script src="app/common/directives/noCopyPaste.js"></script>
+    <script src="app/common/directives/notesErrorCheck.js"></script>
+    <script src="app/common/directives/numbersOnly.js"></script>
+    <script src="app/common/directives/setFocus.js"></script>
+    <script src="app/common/directives/validatePassword.js"></script>
+    <script src="app/common/directives/validateUsername.js"></script>
 </body>
 </html>
