--- a/ProfilePort/index.html
+++ b/ProfilePort/index.html
@@ -19,7 +19,7 @@
     <link href="Content/loading-bar.css" rel="stylesheet" />
     <link href="Content/angular-toastr.css" rel="stylesheet" />
     <link href="Content/ui-bootstrap-csp.css" rel="stylesheet" />
-    
+    <link href="Content/Site.css" rel="stylesheet" />
  
     <link href='//fonts.googleapis.com/css?family=Open+Sans:400italic,300,700,400,600' rel='stylesheet' type='text/css'>
     <script src="Scripts/jquery-1.10.2.js"></script>
