new Client Added

--- a/ProfilePort/index.html
+++ b/ProfilePort/index.html
@@ -30,6 +30,7 @@
     <script type="text/javascript" src="Scripts/angular-toastr.js"></script>
     <script type="text/javascript" src="Scripts/angular-toastr.tpls.js"></script>
     <script type="text/javascript" src="Scripts/angular-message-format.js"></script>
+    <script src="Scripts/angular-resource.js"></script>
 
     <script src="Scripts/angular-ui/ui-bootstrap.js"></script>
     <script src="Scripts/angular-ui/ui-bootstrap-tpls.js"></script>
