--- a/ClientPort/index.html
+++ b/ClientPort/index.html
@@ -78,7 +78,8 @@
     <script src="Scripts/xtform-master/xtForm.js"></script>
     <script src="app/common/controllers/uploadFileModalCtrl.js"></script>
     <script src="App/common/services/constantsService.js"></script>
-    
+
+    <script src="app/Home/controllers/homeResources.js"></script>
     <script src="app/notes/services/notesResources.js"></script>
     <script src="app/notes/controllers/notesCtrl.js"></script>
     <script src="app/notes/services/notesService.js"></script>
