--- a/ClientPort/index.html
+++ b/ClientPort/index.html
@@ -20,9 +20,9 @@
     <link href="Content/angular-toastr.css" rel="stylesheet" />
     <link href="Content/ui-bootstrap-csp.css" rel="stylesheet" />
     <link href="Content/Site.css" rel="stylesheet" />
- 
+
     <link href='//fonts.googleapis.com/css?family=Open+Sans:400italic,300,700,400,600' rel='stylesheet' type='text/css'>
-  
+
     <script src="Scripts/jquery-2.1.4.js"></script>
 
     <script type="text/javascript" src="Scripts/angular.js"></script>
@@ -33,7 +33,8 @@
     <script type="text/javascript" src="Scripts/angular-toastr.js"></script>
     <script type="text/javascript" src="Scripts/angular-toastr.tpls.js"></script>
     <script type="text/javascript" src="Scripts/angular-message-format.js"></script>
-  
+
+
 
     <script src="Scripts/angular-ui/ui-bootstrap.js"></script>
     <script src="Scripts/angular-ui/ui-bootstrap-tpls.js"></script>
@@ -43,15 +44,12 @@
     <script type="text/javascript" src="Scripts/bootstrap.js"></script>
     <script type="text/javascript" src="Scripts/lodash.js"></script>
 
-
-
-    
 </head>
 <body>
 
     <toaster-container toaster-options="{'time-out': 0}"></toaster-container>
 
-    <div class="container body-content" >
+    <div class="container body-content">
 
         <div class="" data-ng-view="" id="ng-view"></div>
 
@@ -68,33 +66,37 @@
     <script type="text/javascript" src="app/config.js"></script>
     <script type="text/javascript" src="app/appCtrl.js"></script>
 
-    <script src="app/Home/controllers/home.js"></script>
-    <script src="app/Home/services/homeService.js"></script>
+    <script type="text/javascript" src="app/Home/controllers/home.js"></script>
+    <script type="text/javascript" src="app/Home/services/homeService.js"></script>
 
     <script type="text/javascript" src="app/profile/controllers/profileCtrl.js"></script>
     <script type="text/javascript" src="app/profile/services/profileService.js"></script>
-    
-    <script src="app/common/controllers/coErrorModalCtrl.js"></script>
-    <script src="Scripts/xtform-master/xtForm.js"></script>
-    <script src="app/common/controllers/uploadFileModalCtrl.js"></script>
-    <script src="App/common/services/constantsService.js"></script>
 
-    <script src="app/Home/controllers/homeResources.js"></script>
-    <script src="app/notes/services/notesResources.js"></script>
-    <script src="app/notes/controllers/notesCtrl.js"></script>
-    <script src="app/notes/services/notesService.js"></script>
+
+    <script type="text/javascript" src="app/common/controllers/coTestCtrl.js"></script>
+
+    <script type="text/javascript" src="app/common/controllers/coErrorModalCtrl.js"></script>
+    <script type="text/javascript" src="Scripts/xtform-master/xtForm.js"></script>
+    <script type="text/javascript" src="app/common/controllers/uploadFileModalCtrl.js"></script>
+    <script type="text/javascript" src="App/common/services/constantsService.js"></script>
+
+    <script type="text/javascript" src="app/Home/controllers/homeResources.js"></script>
+    <script type="text/javascript" src="app/notes/services/notesResources.js"></script>
+    <script type="text/javascript" src="app/notes/controllers/notesCtrl.js"></script>
+    <script type="text/javascript" src="app/notes/services/notesService.js"></script>
+
     <!--Directives-->
-    <script src="app/common/directives/characterOnly.js"></script>
-    <script src="app/common/directives/datePickerPattern.js"></script>
-    <script src="app/common/directives/discardChangesConfirmation.js"></script>
-    <script src="app/common/directives/ngEnter.js"></script>
-    <script src="app/common/directives/noCopyPaste.js"></script>
-    <script src="app/common/directives/notesErrorCheck.js"></script>
-    <script src="app/common/directives/numbersOnly.js"></script>
-    <script src="app/common/directives/setFocus.js"></script>
-    <script src="app/common/directives/validatePassword.js"></script>
-    <script src="app/common/directives/validateUsername.js"></script>
-    <script src="App/message/controllers/messageCtrl.js"></script>
-    <script src="App/message/services/messageService.js"></script>
-</body>
+    <script type="text/javascript" src="app/common/directives/characterOnly.js"></script>
+    <script type="text/javascript" src="app/common/directives/datePickerPattern.js"></script>
+    <script type="text/javascript" src="app/common/directives/discardChangesConfirmation.js"></script>
+    <script type="text/javascript" src="app/common/directives/ngEnter.js"></script>
+    <script type="text/javascript" src="app/common/directives/noCopyPaste.js"></script>
+    <script type="text/javascript" src="app/common/directives/notesErrorCheck.js"></script>
+    <script type="text/javascript" src="app/common/directives/numbersOnly.js"></script>
+    <script type="text/javascript" src="app/common/directives/setFocus.js"></script>
+    <script type="text/javascript" src="app/common/directives/validatePassword.js"></script>
+    <script type="text/javascript" src="app/common/directives/validateUsername.js"></script>
+    <script type="text/javascript" src="App/message/controllers/messageCtrl.js"></script>
+    <script type="text/javascript" src="App/message/services/messageService.js"></script>
+</body>    
 </html>
